-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.2
-
Android 5.1.1
-
-
8f24dbaf0703cf792c263d7d26400892c527a712 (qt/qtbase/5.12)
We updated the Qt version from 5.9.3 to 5.12.2 and installed the app on Android 5.1 device which is using Android AOSP keyboard as default and noticed that we cannot delete linefeeds anymore from the TextArea with the backspace key.
But if we change to AnySoftKeyboard, on the same device, then it works as usual and linefeeds get deleted.
For Gerrit Dashboard: QTBUG-74824 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
259539,2 | Android: Fix deleting of new lines when using backspace | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |